# ffmpegDev

./: CMakeLists.txt  README.md  avio_reading.c  avio_reading.h  ffplay.h  main.cpp  metadata.c  metadata.h
fftools/: cmdutils.c  config.h  ffplay.c
